tests/miniJava/pos/001097_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( true ) while ( 0 ) { } else if ( 0 ) { } else { } } }
