tests/miniJava/neg/005347_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { static public int [] java ( ) { return 0 ; } }
